--- a/compraventa/css/materialize.css
+++ b/compraventa/css/materialize.css
@@ -4209,7 +4209,6 @@ nav ul a span.badge {
 nav {
   color: #fff;
   background-color: #2f1448;
-  opacity: 0.8;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -5453,7 +5452,7 @@ button.btn-floating {
   clear: both;
   color: rgba(0, 0, 0, 0.87);
   cursor: pointer;
-  min-height: 50px;
+  min-height: 1px;
   line-height: 1.5rem;
   width: 100%;
   text-align: left;
@@ -5474,11 +5473,11 @@ button.btn-floating {
 }
 
 .dropdown-content li > a, .dropdown-content li > span {
-  font-size: 16px;
-  color: #26a69a;
-  display: block;
-  line-height: 22px;
-  padding: 14px 16px;
+     font-size: 14px;
+    color: #8212b6;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
 }
 
 .dropdown-content li > span > label {
@@ -7008,9 +7007,8 @@ select {
   cursor: pointer;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
   outline: none;
-  height: 3rem;
+  height: 5rem;
   line-height: 3rem;
   width: 100%;
   font-size: 1rem;
@@ -7024,15 +7022,15 @@ select {
 }
 
 .select-wrapper span.caret {
-  color: initial;
   position: absolute;
   right: 0;
-  top: 0;
+  top: -15px;
   bottom: 0;
   height: 10px;
   margin: auto 0;
   font-size: 10px;
   line-height: 10px;
+  color: #8212b600;
 }
 
 .select-wrapper + label {
@@ -7048,6 +7046,7 @@ select:disabled {
 .select-wrapper.disabled span.caret,
 .select-wrapper.disabled + label {
   color: rgba(0, 0, 0, 0.42);
+  opacity: 1;
 }
 
 .select-wrapper input.select-dropdown:disabled {
