--- a/curso/css/materialize.css
+++ b/curso/css/materialize.css
@@ -2878,9 +2878,9 @@ ul.staggered-list li {
 }
 
 .page-footer {
-  padding-top: 20px;
-  color: #fff;
-  background-color: #ee6e73;
+    padding-top: 20px;
+    color: #fff;
+    background-color: #ba06ff;
 }
 
 .page-footer .footer-copyright {
@@ -3408,7 +3408,6 @@ nav ul a span.badge {
 .row {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
 }
 
 .row:after {
@@ -5997,7 +5996,7 @@ input[type=search]:not(.browser-default),
 textarea.materialize-textarea {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+ /* border-bottom: 1px solid #9e9e9e;*/
   border-radius: 0;
   outline: none;
   height: 3rem;
@@ -7011,7 +7010,7 @@ select {
   line-height: 3rem;
   width: 100%;
   font-size: 1rem;
-  margin: -6px 0 20px 0;
+  margin: -8px 0 20px 0;
   padding: 0;
   display: block;
   -webkit-user-select: none;
