--- a/compraventa/css/style.css
+++ b/compraventa/css/style.css
@@ -12,3 +12,13 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+
+.texth3{
+	color: #8e24aa; 
+	font-weight: 300; 
+	padding-left: 40%;
+}
+
+.texth5{
+	color: #8e24aa; padding-left: 300px;
+}
