--- a/compraventa/css/style.css
+++ b/compraventa/css/style.css
@@ -16,9 +16,9 @@
 .texth3{
 	color: #8e24aa; 
 	font-weight: 300; 
-	padding-left: 40%;
+
 }
 
 .texth5{
-	color: #8e24aa; padding-left: 300px;
+	color: #8e24aa; 
 }
