--- a/empresa/css/materialize.css
+++ b/empresa/css/materialize.css
@@ -2878,9 +2878,9 @@ ul.staggered-list li {
 }
 
 .page-footer {
-  padding-top: 20px;
-  color: #fff;
-  background-color: #ee6e73;
+    padding-top: 20px;
+    color: #fff;
+    background-color: #ba06ff;
 }
 
 .page-footer .footer-copyright {
@@ -3408,7 +3408,6 @@ nav ul a span.badge {
 .row {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
 }
 
 .row:after {
@@ -4246,7 +4245,6 @@ nav .nav-wrapper {
   height: 100%;
   /* color:  #ba06ff; */
   background-color: #ba06ff;
-  opacity: 0.6;
 }
 }
 
@@ -5233,12 +5231,14 @@ small {
     line-height: 8px;
     padding: 0;
     border-radius: 5px;
+    color: chartreuse;
+    background-color: aliceblue;
 }
 
 .btn-floating:hover {
-  /*
+  
   background-color: #26a69a;
-  */
+  
 }
 
 .btn-floating:before {
@@ -5998,7 +5998,7 @@ input[type=search]:not(.browser-default),
 textarea.materialize-textarea {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+ /* border-bottom: 1px solid #9e9e9e;*/
   border-radius: 0;
   outline: none;
   height: 3rem;
@@ -6103,7 +6103,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #ffffff;
 }
 
 input:not([type]).validate + label,
@@ -6236,9 +6236,9 @@ input[type=search].invalid:not(.browser-default),
 input[type=search].invalid:not(.browser-default):focus,
 textarea.materialize-textarea.invalid,
 textarea.materialize-textarea.invalid:focus, .select-wrapper.invalid > input.select-dropdown {
-  border-bottom: 1px solid #F44336;
-  -webkit-box-shadow: 0 1px 0 0 #F44336;
-          box-shadow: 0 1px 0 0 #F44336;
+  border-bottom: 1px solid #ba06ff;
+  -webkit-box-shadow: 0 1px 0 0 #ba06ff;
+          box-shadow: 0 1px 0 0 #ba06ff;
 }
 
 input:not([type]).valid + label:after,
@@ -7012,7 +7012,7 @@ select {
   line-height: 3rem;
   width: 100%;
   font-size: 1rem;
-  margin: 0 0 20px 0;
+  margin: -8px 0 20px 0;
   padding: 0;
   display: block;
   -webkit-user-select: none;
@@ -7022,15 +7022,15 @@ select {
 }
 
 .select-wrapper span.caret {
-  position: absolute;
-  right: 0;
-  top: -15px;
-  bottom: 0;
-  height: 10px;
-  margin: auto 0;
-  font-size: 10px;
-  line-height: 10px;
-  color: #8212b600;
+    position: absolute;
+    right: 0;
+    top: -62px;
+    bottom: 0;
+    height: 10px;
+    margin: auto 0;
+    font-size: 10px;
+    line-height: 10px;
+    color: #ffffff;
 }
 
 .select-wrapper + label {
